<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/icon_bg3"
    tools:context=".activityy.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <EditText
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@drawable/bg_et"
            android:hint="@string/InputPhoneNumber"
            android:inputType="number"
            android:maxLines="1"
            android:paddingStart="5dp"
            android:textSize="24sp"
            tools:ignore="RtlSymmetry,TextFields" />

        <EditText
            android:id="@+id/user_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_et"
            android:hint="@string/InputPasswordAgain"
            android:importantForAutofill="no"
            android:maxLines="1"
            android:paddingStart="5dp"
            android:textSize="24sp"
            tools:ignore="RtlSymmetry,TextFields" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/verification_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_et"
                android:hint="@string/InputVerificationCode"
                android:importantForAutofill="no"
                android:maxLines="1"
                android:paddingStart="5dp"
                android:textSize="24sp"
                tools:ignore="RtlSymmetry,TextFields" />

            <ImageView
                android:id="@+id/code_show"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/SignUpNow"
                android:textColor="@drawable/bg_tv"
                android:textSize="18sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="24dp"
                android:background="@color/black" />

            <TextView
                android:id="@+id/forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/ForgetPassword"
                android:textColor="@drawable/bg_tv"
                android:textSize="18sp" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/remember_me"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/RememberMe" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_btn"
            android:text="@string/LogIn"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>