<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.FragmentActivity">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <RadioGroup
        android:id="@+id/rg_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_home"
            style="@style/MainButtonStyle"
            android:drawableTop="@drawable/fragment_home"
            android:text="@string/FrontPage"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/rb_books"
            style="@style/MainButtonStyle"
            android:drawableTop="@drawable/fragment_books"
            android:text="@string/Books" />

        <RadioButton
            android:id="@+id/rb_mine"
            style="@style/MainButtonStyle"
            android:drawableTop="@drawable/fragment_mine"
            android:text="@string/Mine" />
    </RadioGroup>
</LinearLayout>